# pythonguis

./: .gitignore  CHANGELOG.md  app-1.py  app-4.py  app-5.py  design.md  midi-app-1  midi-app-1.py  midi-app-2.py  mirage-2.py  mirage.py  pyproject.toml  readme-windows.md  readme.md
.github/skills/mirage-parm-ui/: SKILL.md
.github/skills/mirage-sysex/: SKILL.md
.github/skills/mirage-sysex/references/: parameter-scaling.md  program-dump-format.md
.github/workflows/: ci.yml
Mirage-docs/: Ensoniq_Mirage-Advanced_Samplers_Guide.txt  ensoniq_mirage_dsk-1_dsk-8_musicians_manual.txt  mirage-parameter-cards.extracted.txt  mirage-parameter-cards.txt  mirage_advanced_samplers_guide.txt  mirage_dsk-1_musicians_manual.txt
archive/qt/: app-2.py  app-5.py  midi-app-3.py  midi-app-4.py  mirage-2.py
docs/: references-ci-and-uv.md
ensoniq/: config.py  mirage_main.py  mirage_slider.py  mirage_slider_original.py  requirements.txt  setup.py
ensoniq/tests/: test_mirage_main.py  test_mirage_slider.py
maui/: README.md
mirage_orig/: __init__.py  main.py  mirage_slider.py
mirage_parm/: __init__.py  diagnostics.py  main.py  parameter_cards.json  parameters.py  widgets.py
mirage_parm/docs/: README.md
qt/: midi-app-1.py
scripts/: README.md  add-python-scripts-to-path.cmd  add-python-scripts-to-path.ps1  extract_mirage_parameter_pdf.py
shared/: __init__.py  config.py  diagnostics_report.py  midi.py  sysex.py
test-scripts/ensoniq/tests/: test_mirage_main.py
test-scripts/qt/: app-3.py  app-6.py  db-app-1.py  mirage_charts_1.py
test-scripts/scripts/: ocr_mirage_parameter_cards.py  test_dump_request.py
