[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ensoniq"
version = "0.2.2"
description = "Ensoniq Mirage controller GUI (PySide6 + MIDI)"
readme = "readme.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mido==1.3.3",
    "PySide6==6.10.2",
    "PySide6_Addons==6.10.2",
    "PySide6_Essentials==6.10.2",
    "python-rtmidi==1.5.8",
    "shiboken6==6.10.2",
]

[project.optional-dependencies]
dev = [
    "coverage==7.6.10",
    "pillow>=11.0",
    "pypdf>=6.0",
    "pytesseract>=0.3.13",
    "pytest==8.3.4",
    "pytest-qt==4.4.0",
]

[project.scripts]
mirage-gui = "ensoniq.mirage_main:main"
mirage-parm = "mirage_parm.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ensoniq", "shared", "mirage_orig", "mirage_parm"]

[tool.setuptools.package-data]
mirage_parm = ["parameter_cards.json"]
